Gameover implemented, so that a "Gamer Over" message is displayed.